xml2/xml_parser.cpp
//#include "xml_parser.hpp"
//#ifndef  _USING_tmplateSegmentXML_
//#include "xml_parser.cpp.ok"
//#else
//#include "xml_parser.cpp.tmplateSegmentXML"
//#endif

#include "xml_parser.hpp"
#include "xml_doc.hpp"

#include <sss/utlstring.hpp>
#include <sss/log.hpp>

#include <assert.h>

#include <algorithm>
#include <stdexcept>
#include <set>

// FIXME 怎么办？有些是预读的！就是说，允许解析失败！
// 即，有些是必须完成匹配（匹配一次），有些是允许（0或1次）；
// 有些允许任意多次（0到n次）
// 如果，C语言支持 函数式编程，那么一切好说；现在么，
// 1. 使用异常，再增加一个参数，表示允许的次数——反正就3种情况；
// 2. 仿函数式编程，利用传入指针；用另外两个函数，来实现匹配0-1次；
//    和0-n次；
//    不过，如果，连续匹配多个，就成了问题；
//    还有构建对象的时机呢？
//    预读机制？
// ~/project/LanguageImplementationPatterns/CPP_rewrite/LL2/LookaheadParser.hpp|28
// 上面的代码里面，用的是，预读，然后消耗的战术；
// if (LA(A) == ...) {
//    ...;
// }
// while(LA(A) == ...) {
//    ...;
//    ...;
// }
// ~/project/LanguageImplementationPatterns/CPP_rewrite/readme.txt|51
// 另外，还有消除做递归 等技术：
//
//! 消除“左递归”
//
// from
//
// > expr: ID '++'		// match "x++"
// >     | ID '--'		// match "x--"
// >     ;
//
// to
//
// > expr: ID ('++' |'--' ) ; // match "x++" or "x--"
//
//
// ----------------------------------------------------------------------
//! nest list grammar -- page 59 LL(1)
//
// list	 : '[' elements ']' ;		// match bracketed list
// elements : element (',' element)* ;     // match comma-separated list
// element  : NAME | list ;                // element is name or nested list
//
// ** nest list grammar -- page 60 LL(K) k>1
//
// list     : '[' elements ']' ;           // match bracketed list
// elements : element (',' element)* ;     // match comma-separated list
// element  : NAME '=' NAME                // match assignment such as a=b
//          | NAME
//          | list
//          ;
//
// 好了，剩下的问题就是，如何在递归下降的同时，生成结构体？还有错误处理、路径选
// 择问题；
// 首先要明白一点的是，递归下降的每一个子函数，都是消耗了0-n个字符；这些函数的被
// 调用本身，就反映了一种"状态"——如果把整个解析看做是状态机的话；
// 那本parttern的指导书里面，使用的是(预读＋消耗)的战术：先预读一段信息；如果符
// 合要求，就消耗掉这段数据；改进版本，则是记录下，这些信息，已经被解析（理解）
// 为某某标记了——如果，有两个分支，他们的开始的判断规则，是有一致性的话，只不
// 过稍微后面一点，才体现出不同；
//
// 比如，EmptyElemTag 和 STag，都是 "<" Name properties? 开头，只不过前者是
// "/>" 结尾，后者是 ">"结尾；
// 当然，这里讨论的是xml的解析；是否 EmptyElemTag 其实只是一个打印效果的关系——
// 就好比对于xhtml来说，换行符用 <br/>还是 <br></br>，浏览器都是接受的。
// 当然，如果数据结构（或者说类型），一定不同，那么应该怎么办？
//
// 递归下降的时候，如何同时创建结构？
//
// 1. 先让我的parser继承自 sss::skipper;
// 2. 之前的版本，我是先整体tokenizer，然后token -> xml结构体；即，是将原始的字
// 符流，解析为 int + std::string的值对；然后，xml_parser 则利用一个xml::node *
// tmp_node指针，不断地根据token序列信息，进行操作——添加属性、增加节点；回到上
// 层节点；等等操作；
//
// 如此，新版的xml_parser，虽然有N多的子函数，我相信，也可以如此处理！
//! 关于路径记忆版
// 当成功判断可复用串（以空白符为间隔，可以吗？），记录下开始位置，以及成功匹配
// 的函数名；
// 当消耗这些串的时候，从容器中删除这些节点即可；如果以空白符为界，那么以开始位
// 置，作为key，也是可以的。（或者以偏移）
//----------------------------------------------------------------------
//! 如何处理DTD复用？
// 外部的DTD，用的是域名为关键字；
// 内部呢？可以将DTD字符串，为关键字；（先解析，然后输出，再用md5等信息抽取算法
// ）
// 对于无DTD的xml，也是可以用此种方式表达的


#define XML_PARSER_SEG_HELPER(r) SegmentXML_Helper \
    _helper_(this, __func__, r);                \
    if (_helper_.isOK()) {                  \
        return this->consume(__func__, r.count());        \
    }

namespace sss {

    namespace xml2 {
        class AttNameValidator
        {
        public:
            AttNameValidator(sss::xml2::xml_parser* xp)
                : _xp(xp)
            {
                assert(_xp);
                assert(_xp->seg_get_current());
                assert(_xp->seg_get_current()->get_func() == xml_parser::falldown_name_table::PARSE_ATTRIBLIST);
                assert(_xp->seg_get_current()->parent());
                assert(_xp->seg_get_current()->parent()->firstChild());
                xml_parser::SegmentXML * name_seg = _xp->seg_get_current()->parent()->firstChild();
                name_seg->validator(xml_parser::falldown_name_table::PARSE_NAME);
                _node_name = name_seg->get_slice();
            }

            ~AttNameValidator()
            {
            }

            void checkIn()
            {
                xml_parser::SegmentXML * attribute = _xp->seg_get_current()->lastChild();
                assert(attribute);
                assert(attribute->get_func() == xml_parser::falldown_name_table::PARSE_ATTRIBUTE);
                assert(attribute->firstChild());
                attribute->firstChild()->validator(xml_parser::falldown_name_table::PARSE_NAME);
                std::string attribute_name = attribute->firstChild()->get_slice();
                if (_attribute_names.find(attribute_name) != _attribute_names.end()) {
                    throw std::runtime_error("encounter the same attribute_name:" + attribute_name);
                }
                _attribute_names.insert(attribute_name);
            }

        protected:
            sss::xml2::xml_parser * _xp;
            std::string _node_name;
            std::set<std::string> _attribute_names;
        };

        xml_parser::SegmentXML_Helper::SegmentXML_Helper(xml_parser*          _xp, //
                                                         const char *         _func_name,
                                                         xml_parser::Rewinder_t & _r)
            : xp(_xp), seg(0), r(_r)
        {
#if _DEBUG_
            SSS_LOG_FUNC_TRACE(sss::log::log_DEBUG);
            SSS_LOG_DEBUG("from %s\n", _func_name);
#endif
            int func_id = xml_parser::falldown_name_table::conv(_func_name);
            int offset  = this->xp->get_offset(this->r.get_it_beg());
            XMLpathMemKey key(func_id, offset);
            if (this->xp->pathMem.has_trival(key, this->seg)) {
                this->xp->pathMem.usePath(key);
                if (this->seg) {
                    assert(this->seg->get_start() >= 0);
                    assert(this->seg->get_end() >= this->seg->get_start());

                    SSS_LOG_DEBUG("reuse %s at %d, consume %d\n",
                                  xml_parser::falldown_name_table::conv(this->seg->get_func()).c_str(),
                                  this->seg->get_start(),
                                  this->seg->get_end() - this->seg->get_start());

                    r.consume(this->seg->get_end() - this->seg->get_start());

                    assert(this->xp->seg_get_current());
                    //assert(this->xp->seg_get_current()->get_end() != -1);
                    // seg_get_current() 不变！
                    this->xp->seg_get_current()->append(seg);
                }
                else {
                    // NOTE 多重分支的话，恰好前面几个分支，都是同样的第二级函数，比如parse_Name，那么
                    // 确实会发生死在同一种支路上，并且是同一位置！
                    r.rollback();
                }
                r.commit();
            }
            else {
                this->seg = new SegmentXML(_func_name,
                                           this->xp->get_sbeg(),
                                           offset);
                if (!this->xp->seg_get_root()) {
                    this->xp->seg_set_root(this->seg);
                    assert(!this->xp->seg_get_current());
                    this->xp->seg_set_current(0);
                }

                if (this->xp->seg_get_current()) {
                    assert(this->xp->seg_get_current()->get_end() == -1);
                    this->xp->seg_get_current()->append(seg);
                }
                this->xp->seg_set_current(seg);
            }

        }

        xml_parser::SegmentXML_Helper::~SegmentXML_Helper()
        {
            //SSS_LOG_FUNC_TRACE(sss::log::log_DEBUG);
            //SSS_LOG_DEBUG("from %s\n",
            //              xml_parser::falldown_name_table::conv(this->seg->get_func()).c_str());

            if (this->isOK()) {
                return;
            }

            SegmentXML * parent = this->seg->get_parent();
            if (this->r) {
                int offset_end = this->xp->get_offset(this->r.get_it_end());
                this->seg->set_end(offset_end);
                //SSS_LOG_DEBUG("%s\n", "r.commit()");

                // parse_CharData 当内部，全部是空白字符组成，删除该节点！
                if (this->seg->get_func() == falldown_name_table::PARSE_CHARDATA) {
                    this->seg->trim();
                    if (parent && this->seg->empty()) {
                        parent->remove_child(this->seg);
                    }
                }
            }
            else {
                this->seg->unlink();
                this->xp->pathMem.add(XMLpathMemKey(this->seg->get_func(), this->seg->get_start()), 0);

                SegmentXML * left = 0;
                for (SegmentXML * node = this->seg->first_child(); node; node = left) {
                    left = node->nextSibling();
                    node->unlink();
                    this->xp->pathMem.add(XMLpathMemKey(node->get_func(), node->get_start()),
                                          node);
                }
                delete this->seg;
            }

            this->xp->seg_set_current(parent);
        }

        void xml_parser::SegmentXML::string_slice_print(std::ostream& out, std::string::const_iterator s_beg)
        {
            std::advance(s_beg, this->start);
            for (int i = 0; i < this->end - this->start; ++i, ++s_beg) {
                out << *s_beg;
            }
        }

        void xml_parser::SegmentXML::print(std::ostream& out, std::string::const_iterator s_beg)
        {
            out << falldown_name_table::conv(this->func_id)
                << "[" << this->start << "," << this->end << "]";

            switch (this->func_id)
            {
            //case falldown_name_table::PARSE_NAME:
            //    this->string_slice_print(out, s_beg);
            //    break;

            default:
                if (!this->hasChildren()) {
                    this->string_slice_print(out, s_beg);
                }
                break;
            }
            out << std::endl;

            if (this->size()) {
                out << "{";
                for (SegmentXML * p = this->first_child();
                     p;
                     p = p->nextSibling())
                {
                    p->print(out, s_beg);
                }
                out << "}" << std::endl;
            }
        }

        xml_parser::falldown_name_table::falldown_name_table()
        {
            value_type & val(*this);
            val["parse_bom"] = PARSE_BOM;
            val["parse_document"] = PARSE_DOCUMENT;
            val["parse_Char"] = PARSE_CHAR;
            val["parse_S"] = PARSE_S;
            val["parse_NameStartChar"] = PARSE_NAMESTARTCHAR;
            val["parse_NameChar"] = PARSE_NAMECHAR;
            val["parse_Name"] = PARSE_NAME;
            val["parse_Names"] = PARSE_NAMES;
            val["parse_Nmtoken"] = PARSE_NMTOKEN;
            val["parse_Nmtokens"] = PARSE_NMTOKENS;
            val["parse_EntityValue"] = PARSE_ENTITYVALUE;
            val["parse_AttValue"] = PARSE_ATTVALUE;
            val["parse_SystemLiteral"] = PARSE_SYSTEMLITERAL;
            val["parse_PubidLiteral"] = PARSE_PUBIDLITERAL;
            val["parse_PubidChar"] = PARSE_PUBIDCHAR;
            val["parse_CharData"] = PARSE_CHARDATA;
            val["parse_Comment"] = PARSE_COMMENT;
            val["parse_PI"] = PARSE_PI;
            val["parse_PITarget"] = PARSE_PITARGET;
            val["parse_CDSect"] = PARSE_CDSECT;
            val["parse_CDStart"] = PARSE_CDSTART;
            val["parse_CData"] = PARSE_CDATA;
            val["parse_CDEnd"] = PARSE_CDEND;
            val["parse_prolog"] = PARSE_PROLOG;
            val["parse_XMLDecl"] = PARSE_XMLDECL;
            val["parse_VersionInfo"] = PARSE_VERSIONINFO;
            val["parse_Eq"] = PARSE_EQ;
            val["parse_VersionNum"] = PARSE_VERSIONNUM;
            val["parse_Misc"] = PARSE_MISC;
            val["parse_doctypedecl"] = PARSE_DOCTYPEDECL;
            val["parse_DeclSep"] = PARSE_DECLSEP;
            val["parse_intSubset"] = PARSE_INTSUBSET;
            val["parse_markupdecl"] = PARSE_MARKUPDECL;
            val["parse_extSubset"] = PARSE_EXTSUBSET;
            val["parse_extSubsetDecl"] = PARSE_EXTSUBSETDECL;
            val["parse_SDDecl"] = PARSE_SDDECL;
            val["parse_element"] = PARSE_ELEMENT;
            val["parse_STag"] = PARSE_STAG;
            val["parse_Attribute"] = PARSE_ATTRIBUTE;
            val["parse_ETag"] = PARSE_ETAG;
            val["parse_content"] = PARSE_CONTENT;
            val["parse_AttribList"] = PARSE_ATTRIBLIST;
            val["parse_EmptyElemTag"] = PARSE_EMPTYELEMTAG;
            val["parse_elementdecl"] = PARSE_ELEMENTDECL;
            val["parse_contentspec"] = PARSE_CONTENTSPEC;
            val["parse_children"] = PARSE_CHILDREN;
            val["parse_cp"] = PARSE_CP;
            val["parse_Times_suffix"] = PARSE_TIMES_SUFFIX;
            val["parse_choice"] = PARSE_CHOICE;
            val["parse_seq"] = PARSE_SEQ;
            val["parse_Mixed"] = PARSE_MIXED;
            val["parse_Mixed_suffix"] = PARSE_MIXED_SUFFIX;
            val["parse_AttlistDecl"] = PARSE_ATTLISTDECL;
            val["parse_AttDef"] = PARSE_ATTDEF;
            val["parse_AttType"] = PARSE_ATTTYPE;
            val["parse_StringType"] = PARSE_STRINGTYPE;
            val["parse_TokenizedType"] = PARSE_TOKENIZEDTYPE;
            val["parse_EnumeratedType"] = PARSE_ENUMERATEDTYPE;
            val["parse_NotationType"] = PARSE_NOTATIONTYPE;
            val["parse_Enumeration"] = PARSE_ENUMERATION;
            val["parse_DefaultDecl"] = PARSE_DEFAULTDECL;
            val["parse_conditionalSect"] = PARSE_CONDITIONALSECT;
            val["parse_includeSect"] = PARSE_INCLUDESECT;
            val["parse_ignoreSect"] = PARSE_IGNORESECT;
            val["parse_ignoreSectContents"] = PARSE_IGNORESECTCONTENTS;
            val["parse_Ignore"] = PARSE_IGNORE;
            val["parse_CharRef"] = PARSE_CHARREF;
            val["parse_Reference"] = PARSE_REFERENCE;
            val["parse_EntityRef"] = PARSE_ENTITYREF;
            val["parse_PEReference"] = PARSE_PEREFERENCE;
            val["parse_EntityDecl"] = PARSE_ENTITYDECL;
            val["parse_GEDecl"] = PARSE_GEDECL;
            val["parse_PEDecl"] = PARSE_PEDECL;
            val["parse_EntityDef"] = PARSE_ENTITYDEF;
            val["parse_PEDef"] = PARSE_PEDEF;
            val["parse_ExternalID"] = PARSE_EXTERNALID;
            val["parse_NDataDecl"] = PARSE_NDATADECL;
            val["parse_TextDecl"] = PARSE_TEXTDECL;
            val["parse_extParsedEnt"] = PARSE_EXTPARSEDENT;
            val["parse_EncodingDecl"] = PARSE_ENCODINGDECL;
            val["parse_EncName"] = PARSE_ENCNAME;
            val["parse_NotationDecl"] = PARSE_NOTATIONDECL;
            val["parse_PublicID"] = PARSE_PUBLICID;
            val["parse_Letter"] = PARSE_LETTER;
            val["parse_BaseChar"] = PARSE_BASECHAR;
            val["parse_Ideographic"] = PARSE_IDEOGRAPHIC;
            val["parse_CombiningChar"] = PARSE_COMBININGCHAR;
            val["parse_Digit"] = PARSE_DIGIT;
            val["parse_Extender"] = PARSE_EXTENDER;
            val["parse_SDDecl_Value"] = PARSE_SDDECL_VALUE;
        }

        void xml_parser::XMLpathMem::clear()
        {
            value_type & val(*this);
            for (value_type::iterator it = val.begin(); it != val.end(); ++it) {
                delete it->second;
            }
            val.clear();
        }

        bool xml_parser::XMLpathMem::add(const xml_parser::XMLpathMemKey& key, xml_parser::SegmentXML* seg)
            throw(const char *)
        {
            value_type & val(*this);
            key.validAssert();
            // NOTE seg 是否为0，都有意义，所以不用assert

            value_type::iterator it = val.find(key);
            assert(it == val.end());
            val.insert(std::make_pair(key, seg));
            if (!seg) {
                SSS_LOG_DEBUG("%s %d faild path.\n",
                              xml_parser::falldown_name_table::conv(key.funcID()).c_str(),
                              key.offset());
            }
            else {
                SSS_LOG_DEBUG("%s [%d, %d] success %s\n",
                              xml_parser::falldown_name_table::conv(seg->get_func()).c_str(),
                              seg->get_start(), seg->get_end(),
                              seg->get_slice().c_str());
            }
            return true;
        }

        bool xml_parser::XMLpathMem::has_trival(const xml_parser::XMLpathMemKey& key, xml_parser::SegmentXML *& seg)
        {
            bool ret = false;
            value_type & val(*this);
            key.validAssert();

            value_type::iterator it = val.find(key);
            if (it != val.end()) {
                seg = it->second;
                ret = true;
            }

            return ret;
        }

        bool xml_parser::XMLpathMem::usePath(const xml_parser::XMLpathMemKey& key)
        {
            value_type & val(*this);
            key.validAssert();
            // NOTE seg 是否为0，都有意义，所以不用assert

            value_type::iterator it = val.find(key);
            assert(it != val.end());
            val.erase(it);
            return true;
        }

        xml_parser::xml_parser()
            : p_it(0),
            p_root(0), p_cur(0), p_info(0), p_doctype(0), p_document(0),
            last_func_name(0),
            seg_root(0),
            seg_current(0),
            last_err_offset(-1),
            last_err_func_name(0)
        {
        }

        xml_parser::~xml_parser()
        {
        }

        // 解析 xml_str_data ，构建于 tmp_doc 对象
        xml2::node * xml_parser::parse(const std::string& xml_str_data)
        {
            return this->parse(xml_str_data.begin(),
                               xml_str_data.end());
        }

        void xml_parser::clear()
        {
            delete this->seg_root;
            this->seg_set_root(0);
            this->seg_set_current(0);

            this->p_document = 0;
            this->p_cur = 0;
            this->p_info = 0;
            this->p_root = 0;
            this->p_doctype = 0;

            this->pathMem.clear();

            this->last_err_msg = "";
            this->last_err_func_name = 0;
            this->last_err_offset = -1;
        }

        xml2::node * xml_parser::Seg2XMLsubtree(xml2::xml_doc * pdoc, xml_parser::SegmentXML * seg_root)
        {
            SSS_LOG_FUNC_TRACE(sss::log::log_DEBUG);
            try {
                assert(pdoc);
                assert(seg_root);
                this->p_document = pdoc;
                seg_root->validator(xml_parser::falldown_name_table::PARSE_ELEMENT);

                // 要不，我这样？再创建一个xml_doc对象，作为子树的容器？
                // 在解析完成之后，返回内部子树，然后，销毁整个容器即可！
                // 反正我的xml对象树，也没有限制xml_doc下面在指针不能还指向xml_doc对象？
                this->p_root = new xml2::xml_doc; // TODO 用handle来包裹，避免内存泄露
                this->p_cur = p_root;

                this->Seg2XML_element(seg_root);  // 将current以element元素，一次解析下去；

                xml2::node_list_t tmp_nodes;
                std::swap(tmp_nodes, this->p_root->node_list);
                delete this->p_root;
                assert(tmp_nodes.size() == 1u);
                xml2::node * ret = tmp_nodes[0];

                this->clear();

                return ret;
            }
            catch (std::exception& e) {
                std::cout << e.what() << std::endl;
                return 0;
            }
        }

        xml2::node * xml_parser::Seg2XML(xml_parser::SegmentXML * seg_root)
        {
            SSS_LOG_FUNC_TRACE(sss::log::log_DEBUG);
            try {
                assert(seg_root);
                seg_root->validator(xml_parser::falldown_name_table::PARSE_DOCUMENT);

                xml_parser::SegmentXML * current = SegHandle(seg_root).firstChild().get();
                current->validator(xml_parser::falldown_name_table::PARSE_PROLOG);
                if (!this->p_document) {
                    this->p_document = new xml2::xml_doc;
                    this->p_cur = this->p_document;
                }
                this->Seg2XML_prolog(current); // 将prolog子树，抽取出来，生成合适的节点，放在p_document下面；
                this->Seg2XML_element(current);// 将current以element元素，一次解析下去；
